# fullstack-parser

./: .dockerignore  .env  .env.dev  .env.prod  .env.prod.backup  .gitignore  .gitlab-ci.yml  .gitmessage  .kilocodemodes  .pre-commit-config.yaml  .secrets.baseline  1.txt  2025-09-25-caveat-the-messages-below-were-generated-by-the-u.txt  CLAUDE.md  CLEANUP_COMPLETED.md  CLEANUP_PLAN.md  CODEOWNERS  COMMENTS_ANALYSIS_REPORT.md  COMMENTS_FIXES.md  COMPACT_UI_CHANGES.md  FINAL_ANALYSIS_REPORT.md  FINAL_CLEANUP_REPORT.md  GITLAB_SETUP.md  IMPLEMENTATION_PLAN.md  INTEGRATION_ANALYSIS_REPORT.md  Makefile  Makefile.simple  PRODUCTION_SETUP.md  PROGRESS_CALCULATOR_IMPLEMENTATION.md  PROJECT_CLEANUP_REPORT.md  README.md  README_ADMINER.md  REPOSITORY_REFACTOR_PLAN.md  SETUP.md  SUCCESS_REPORT.md  bandit-report.json  branches_to_delete.txt  check_groups.py  cleanup.sh  delete_branches_manual.txt  (+29 more)
backend/: .bandit  .dockerignore  .env.example  .env.test  .gitignore  AI_AGENT_INSTRUCTIONS.md  ALEMBIC_SETUP.md  API_REFACTORING_V1_IMPLEMENTATION.md  API_REFACTORING_V1_TD.md  API_REFACTORING_V2_IMPLEMENTATION.md  AUTHOR_COMMENT_RELATIONSHIP.md  AUTH_REFACTOR_README.md  CELERY_SETUP.md  CLEAN_ARCHITECTURE.md  Dockerfile  Dockerfile.arq  Dockerfile.dev  Dockerfile.worker  MIGRATION_TO_FASTAPI_BEST_PRACTICES_TD.md  Makefile  Makefile.celery  README-AUTH.md  README-REDIS.md  README.Docker.md  README.alembic.md  README.docker.md  README.md  REFACTORING_PLAN.md  REFACTORING_PLAN_UTILS.md  REFACTORING_PLAN_fileParser.md  REFACTORING_PLAN_fileParser_v1.md  REFACTORING_REPORT.md  REFACTORING_REPORT_FINAL.md  REGISTRATION_SUMMARY.md  activate_env.sh  after.txt  alembic.ini  bandit-report.json  before.txt  bunfig.toml  (+68 more)
backend/alembic/: .gitkeep  env.py  script.py.mako
backend/alembic/versions/: 001_initial_migration_001.py  002_fix_timezone_fields_to_utc.py  05f77fc9bc66_add_photo_url_to_vk_groups.py  128983c4a464_update_keywords_table_structure.py  160bf10264a1_create_all_tables.py  2024_12_19_2103_add_confidence_score_to_comment_keyword_matches.py  20250115000000_add_monitoring_fields_to_vk_groups.py  20250116000000_add_viewed_archived_fields_to_vk_comments.py  20250121000000_merge_heads.py  2025_01_11_1849_make_published_at_nullable.py  26eb90aa45dc_initial_migration.py  2911c79d1296_initial_migration.py  33ad0550f6f8_merge_multiple_heads.py  51fcd6f1165b_fix_server_default_now_для_created_at_.py  7bd888354bf6_add_group_vk_id_field_to_comment_model.py  84629a3c9ad3_initial_migration.py  999999999999_init_all_tables.py  add_post_vk_id_to_vk_comments.py  bce7a0c9bf4a_fix_add_nullable_false_for_created_at_.py  dde5a46a2918_fix_add_default_for_created_at_in_vk_.py  f58c81a1f7fd_merge_heads.py
backend/alembic/versions_backup/: 2025_01_14_0127_create_comments_table.py  2025_01_14_0136_create_authors_table.py  2025_01_14_0137_create_posts_table.py  2025_01_14_0139_create_keywords_table.py  2025_09_12_0802-1d3c4329d09c_initial_migration.py  2025_09_13_1537-add_author_comment_relationship.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/core/: background_tasks.py  cache.py  config.py  database.py  database_service.py  error_handlers.py  exceptions.py  hashing.py  logging.py  security.py  time_utils.py
backend/app/middleware/: request_logging.py  retry.py
backend/app/models/: __init__.py  base.py  comment_keyword_match.py  error_entry.py  error_report.py  keyword.py  user.py  vk_comment.py  vk_group.py  vk_post.py
backend/app/schemas/: __init__.py  base.py  error_report.py  health.py  keyword.py  monitoring.py  parser.py  settings.py  stats.py  user.py  vk_comment.py  vk_group.py
backend/app/services/: __init__.py  arq_enqueue.py  base.py  comment_search_service.py  comment_service.py  error_report_db_service.py  error_reporting_service.py  group_file_importer.py  group_manager.py  group_service.py  group_stats_service.py  group_validator.py  (+15 more)
backend/config/: config.yaml  queue.js
backend/docs/: API_DESIGN_PRINCIPLES.md  PERFORMANCE_OPTIMIZATION.md  SCALABILITY_ARCHITECTURE.md  SECURITY_IMPROVEMENTS.md  docker.md  performance.md  progress-calculator.md  shared-application-layer.md
backend/examples/: progress-calculator-usage.ts
backend/loadtests/: auth_login.targets  comments_get.targets  comments_post.targets  keywords_get.targets  morphological_analyze.targets  tasks_enqueue.targets
backend/migrations/: 001-add-vk-fields-to-posts.js  001_create_groups_table.sql  002-add-vk-fields-to-comments.js  003-add-unique-constraints.js  004-add-finishedAt-to-tasks.js  005-upgrade-task-model.js  006-add-performance-indexes.js  007-update-constraints-to-not-null.js  alembic.ini  env.py
backend/prisma/: introspect-and-baseline.ts  schema.prisma
backend/requirements/: base.txt  dev.txt  prod.txt
backend/scripts/: benchmark_asynq.go  celery_flower.sh  celery_worker.sh  fix_monitoring_times.py  migrate.py  migrate.sh  migration_keywords.py  run-migration.js  start_celery_beat.py  start_celery_worker.py  start_flower.py  test-progress-calculator.js  update_comment_authors.py
backend/src/: __init__.py  app.module.ts  celery_app.py  config.py  database.py  exceptions.py  groups.py  handlers.py  main.py  main.ts  main_simple.py  models.py  pagination.py  responses.py  server.ts  tasks.py
backend/test/: README.md  comments.e2e-spec.ts  groups.e2e-spec.ts  jest-e2e.json  keywords.e2e-spec.ts  parser.e2e-spec.ts  performance.e2e-spec.ts  run-tests.sh  setup.ts  users.e2e-spec.ts  verify-data-consistency.ts
backend/test_env/: pyvenv.cfg
backend/tests/: __init__.py  conftest.py  connection.test.js  connection.test.ts  setup.ts  test_comment_search_service.py  test_comment_service.py  test_config.py  test_group_file_importer.py  test_group_manager.py  test_group_validator.py  test_keyword_service_enhanced.py  test_main.py  test_main_test.py  test_monitoring_service.py  test_monitoring_service_test.py  test_parser_service.py  test_parsing_manager.py  test_settings.py  test_stats_service.py  test_vk_data_parser.py  test_vk_data_parser_fixed.py  test_vkbottle_service.py
(+2044 files in other folders)
