[tool.black]
line-length = 79
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 79

[tool.ruff]
line-length = 79
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = false
disallow_any_generics = false
disallow_untyped_defs = false
follow_imports = "silent"
strict_optional = false
warn_redundant_casts = false
warn_unused_ignores = false
disallow_any_unimported = false
no_implicit_optional = false
warn_return_any = false
disallow_subclassing_any = false
ignore_missing_imports = true
disable_error_code = ["assignment", "arg-type", "attr-defined"]
files = ["src"]
exclude = ["^tests/"]
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
    "vk_api.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "vkbottle.*",
    "vkbottle_types.*",
]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101", "B601"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.poetry]
name = "backend"
version = "0.1.0"
description = "FastAPI backend for fullstack-parser"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "src", from = "."}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.116.1"
uvicorn = {version = "0.35.0", extras = ["standard"]}
pydantic = {version = ">=2.5.0,<3.0.0"}
pydantic-settings = "2.1.0"
sqlalchemy = ">=2.0.25"
alembic = ">=1.13.0"
asyncpg = "0.30.0"
httpx = "0.26.0"
psutil = "^7.0.0"
redis = ">=4.2.0,<6"
arq = "^0.26.3"
vkbottle = "^4.6.0"
structlog = "^25.4.0"
pymorphy2 = "^0.9.1"
python-multipart = "^0.0.20"
passlib = "^1.7.4"
python-jose = "^3.5.0"
email-validator = "^2.3.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.4.1"
pytest-cov = "4.1.0"
pytest-mock = "3.14.1"
httpx = "0.26.0"
black = "25.1.0"
isort = "5.13.2"
ruff = "0.12.1"
mypy = "1.8.0"
bandit = {extras = ["toml"], version = ">=1.7.6"}
python-dotenv = "1.1.1"
watchdog = "3.0.0"
types-passlib = ">=1.7.7.20250602"
psycopg2-binary = ">=2.9.9"
pytest-env = ">=1.1.5"
pytest-aio = ">=1.9.0"
pip-audit = "^2.9.0"
pytest-xdist = "^3.8.0"
types-croniter = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
